# Hoppy-Whisper

./: .gitignore  AGENTS.md  BUILD.md  BUILD_AND_RUN_REPORT.md  CHANGELOG.md  CHANGELOG_REMOTE_TRANSCRIPTION.md  CODEBASE_ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HoppyWhisper.spec  HoppyWhisper_Remote.spec  HoppyWhisper_onefile.spec  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LICENSE  MICROSOFT_STORE_PREPARATION.md  OPEN_SOURCE_READINESS.md  PRIVACY_POLICY.md  Parakeet.spec  Parakeet_onefile.spec  README.md  RELEASE.md  REMOTE_TRANSCRIPTION.md  SECURITY.md  SMART_CLEANUP_REMOVAL.md  SMOKE_TEST.md  THIRD_PARTY_NOTICES.md  TODO.md  build.ps1  create_issues_easy_path.ps1  debug_git_status.py  droid-output.txt  hook-onnx_asr.py  hook-onnxruntime.py  issues_easy_path.csv  parakeet.iss  plan.md  prompt.txt  pyi_rth_onnx_dlls.py  pyproject.toml  (+2 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-preview.yml  droid-exec.yml  opencode.yml  release.yml  windows-ci.yml
examples/: check_providers.py  settings_remote_example.json
msix/: ASSETS_REQUIREMENTS.md  AppxManifest.xml  HUMAN_REQUIRED_STEPS.md  MSIX_BUILD_GUIDE.md  QUICK_START.md  README.md  STORE_LISTING_CONTENT.md  STORE_LISTING_CONTENT_ZH_CN.md  STORE_SUBMISSION_GUIDE.md  build_msix.ps1  generate_assets.py  priconfig.xml
msix/Assets/: .gitkeep
msix/Screenshots/: .gitkeep
src/app/: __init__.py  __main__.py  metrics.py  settings.py  startup.py
src/app/audio/: __init__.py  buffer.py  exceptions.py  recorder.py  vad.py
src/app/cleanup/: __init__.py  engine.py
src/app/history/: __init__.py  dao.py  palette.py  schema.py
src/app/hotkey/: __init__.py  chord.py  manager.py
src/app/transcriber/: __init__.py  hoppy.py  model_manager.py  onnx_session.py  parakeet.py  remote.py
src/app/tray/: __init__.py  controller.py  icons.py  state.py
src/app/ui/: __init__.py  hotkey_capture.py  onboarding.py  settings.py  toast.py
tests/: test_accessibility.py  test_audio.py  test_buffer.py  test_cleanup_engine.py  test_cleanup_removed.py  test_e2e_pipeline.py  test_error_recovery.py  test_history_dao.py  test_history_export.py  test_history_palette.py  test_history_performance.py  test_hoppy.py  test_hotkey_capture.py  test_hotkey_manager_errors.py  test_load_transcriber.py  test_metrics.py  test_model_manager.py  test_onnx_session.py  test_parakeet.py  test_paste_window.py  test_raw_transcription.py  test_remote_transcriber.py  test_settings_hotkey_apply.py  test_shift_bypass.py  test_smoke.py  test_tray_hotkey.py  test_vad.py
